--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -1,8 +1,5 @@
 on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 0 * * *'
-
+  push
 jobs:
   build:
     runs-on: ubuntu-latest
