--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -10,9 +10,12 @@ jobs:
     steps:
     - name: Checkout the import-list
       uses: actions/checkout@v4
-      with:
-        ref: import-list-noble
-        fetch-depth: 1
+      # with:
+      #   ref: import-list-noble
+      #   fetch-depth: 1
+
+    - name: Checkout import-list-noble
+      run: git switch import-list-noble
 
     - name: Get the list of packages
       run: |
