--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -26,18 +26,19 @@ jobs:
         sed -i 's/^\(Types: deb\)$/\1 deb-src/g' /etc/apt/sources.list.d/ubuntu.sources
         apt update
         apt install -y git python3-launchpadlib python3-apt python3-github
+        pip install GitPython
 
-    - name: Checkout the repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 1
+    # - name: Checkout the repository
+    #   uses: actions/checkout@v4
+    #   with:
+    #     fetch-depth: 1
 
-    - name: Verify that we are shipping the latest version
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_REPOSITORY: ${{ github.event.repository.name }}
-      run: |
-        while IFS=":" read -r line upstream_series; do
-            echo "Checking version for $line"
-            python3 ./get-latest-version.py "$line" "noble" "$upstream_series"
-        done < "/tmp/patched-packages"
+    # - name: Verify that we are shipping the latest version
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     GITHUB_REPOSITORY: ${{ github.event.repository.name }}
+    #   run: |
+    #     while IFS=":" read -r line upstream_series; do
+    #         echo "Checking version for $line"
+    #         python3 ./get-latest-version.py "$line" "noble" "$upstream_series"
+    #     done < "/tmp/patched-packages"
