--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -25,8 +25,7 @@ jobs:
       run: |
         sed -i 's/^\(Types: deb\)$/\1 deb-src/g' /etc/apt/sources.list.d/ubuntu.sources
         apt update
-        apt install -y git python3-launchpadlib python3-apt python3-github python3-pip
-        pip install GitPython
+        apt install -y git python3-launchpadlib python3-apt python3-github python3-gitpython
 
     # - name: Checkout the repository
     #   uses: actions/checkout@v4
