--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -37,8 +37,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_REPOSITORY: ${{ github.event.repository.name }}
-      run: |
-        while IFS=":" read -r line upstream_series; do
-            echo "Checking version for $line"
-            echo "$line" "noble" "$upstream_series"
-        done < "/tmp/patched-packages"
+      run: python3 ./get-latest-version.py "noble"
