--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -37,4 +37,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_REPOSITORY: ${{ github.event.repository.name }}
-      run: python3 get-latest-version.py "noble"
+      run: |
+        python3 get-latest-version.py "noble"
