--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -10,14 +10,14 @@ jobs:
     steps:
     - name: Checkout the import-list
       uses: actions/checkout@v4
-      # with:
-      #   ref: import-list-noble
-      #   fetch-depth: 1
+      with:
+        ref: import-list-noble
+        fetch-depth: 1
 
-    - name: Checkout import-list-noble
-      run: |
-        git config --global --add safe.directory /__w/os-patches/os-patches &&
-        git switch import-list-noble
+    # - name: Checkout import-list-noble
+    #   run: |
+    #     git config --global --add safe.directory /__w/os-patches/os-patches &&
+    #     git switch import-list-noble
 
     - name: Get the list of packages
       run: |
@@ -39,4 +39,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_REPOSITORY: ${{ github.event.repository.name }}
-      run: python3 get_latest_version.py "noble"
+      run: |
+        while IFS=":" read -r line upstream_series; do
+            echo "Checking version for $line"
+            python3 ./get-latest-version.old.py "$line" "noble" "$upstream_series"
+        done < "/tmp/patched-packages"
