--- a/.github/workflows/noble.yml
+++ b/.github/workflows/noble.yml
@@ -7,6 +7,9 @@ jobs:
     container:
       image: ghcr.io/elementary/docker:stable
 
+    env:
+      PACKAGES_TO_IMPORT_PATH: '/tmp/patched-packages'
+
     steps:
     - name: Checkout the import-list
       uses: actions/checkout@v4
@@ -16,14 +19,13 @@ jobs:
 
     - name: Get the list of packages
       run: |
-        cp noble/packages_to_import /tmp/patched-packages
+        cp noble/packages_to_import $PACKAGES_TO_IMPORT_PATH
 
     - name: Install Dependencies and enable Sources
       run: |
         sed -i 's/^\(Types: deb\)$/\1 deb-src/g' /etc/apt/sources.list.d/ubuntu.sources
         apt update
-        apt install -y git python3-launchpadlib python3-apt python3-github python3-pip
-        pip install --break-system-packages GitPython
+        apt install -y git python3-launchpadlib python3-apt python3-github python3-git
 
     - name: Checkout the repository
       uses: actions/checkout@v4
@@ -34,4 +36,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_REPOSITORY: ${{ github.event.repository.name }}
-      run: python3 get_latest_version.py "noble"
+      run: python3 get_latest_version.py "noble" 
